[package]
name = "morselock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "morselockd"
path = "src/daemon/main.rs"

[[bin]]
name = "morselock"
path = "src/client/main.rs"

[lib]
path = "src/lib.rs"


[dependencies]
dotenvy = "0.15.7"
lazy_static = "1.4.0"
qrcode = { version = "0.12.0", features = [] }
rand = "0.8.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
structopt = "0.3.26"
textplots = "0.8.0"
tokio = { version = "1.28.0", features = ["full"] }
totp-rs = { version = "5.0.1", features = ["otpauth"] }
