[package]
name = "morselock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "morselockd"
path = "src/daemon/main.rs"

[[bin]]
name = "morselock"
path = "src/client/main.rs"

[lib]
path = "src/lib.rs"


[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.5", features = ["derive"] }
cpal = "0.15.2"
ctrlc = "3.2.5"
distance = "0.4.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.17"
plotters = "0.3.4"
qrcode = { version = "0.12.0", features = [] }
quantogram = "0.4.4"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_derive = "1.0.160"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.14"
totp-rs = { version = "5.0.1", features = ["otpauth"] }

